# NemoCode-Studio

./: .gitignore  ALL_FIXES_APPLIED_FINAL.md  APP_ARCHITECTURE_DIAGRAM.md  BACKEND_STABILITY_PROGRESS.md  BACKEND_STABILITY_SUMMARY.md  BACKEND_TERMINAL_FIXES_APPLIED.md  BUTTON_AUDIT_REPORT.md  CHANGELOG.md  CHATBOT_FIX_PLAN.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CRITICAL_FIXES_PLAN.md  DOCS_INDEX.md  ERROR_HANDLING_IMPROVEMENTS.md  FINAL_SESSION_SUMMARY_DEC3.md  FINAL_STATUS_AND_NEXT_STEPS.md  FIXES_APPLIED.md  FIXES_COMPLETED.md  FRONTEND_MEMORY_PROFILING.md  HOW_TO_RUN.md  IMPLEMENTATION_STATUS.md  LAUNCH_CHECKLIST.md  LICENSE  MANUAL_TESTING_CHECKLIST.md  MEMORY_PROFILING_ACTIVE.md  MEMORY_PROFILING_BRIEF.md  MEMORY_PROFILING_COMPLETE_SETUP.md  MEMORY_PROFILING_FINAL.md  MEMORY_PROFILING_READY.md  MEMORY_PROFILING_STATUS.md  MIGRATION_COMPLETE.md  MONACO_FEATURES_ENABLED.md  NAVIGATION_HISTORY_FEATURE.md  NEXT_ACTIONS.md  NEXT_PHASE.md  NEXT_SESSION_HANDOFF.md  NemoCode-Blueprint.md  POLISH_ISSUES_FOUND.md  PRIORITY_TASKS.md  PROFILE_BOTH.sh  (+55 more)
archive/: README.md
sandbox/: Dockerfile  docker-compose.yml
tasks/: README.md  TASK-001-focus-management.md  TASK-002-aria-labels.md  TASK-003-test-react-project.md  TASK-004-test-python-project.md  (+43 more)
tauri-shell/src-tauri/: Cargo.toml  tauri.conf.json
tauri-shell/src-tauri/binaries/: nemocode-backend-x86_64-apple-darwin
tauri-shell/src-tauri/capabilities/: default.json  shell-scope.json
tauri-shell/src-tauri/src/: agent.rs  error.rs  lib.rs  llm.rs  logging.rs  main.rs  rag.rs  terminal.rs  tools.rs
(+150 files in other folders)
