[package]
name = "tauri-shell"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.3"
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
chrono = { version = "=0.4.38", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
lancedb = "0.4.20" # Phase 3
ignore = "0.4"
arrow = "51.0"
portable-pty = "0.8"
base64 = "0.21"
log = "0.4"
dirs = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"

